# imdb-rating-predictions

./: .gitignore  Dockerfile  LICENSE  database.db  docker-compose.yml  exploration.ipynb  imdb.db  imdbspider.py  keep2022.ipynb  pyproject.toml  test.py
docker/fastapi/: Dockerfile  main.py  pyproject.toml
docker/streamlit/: interface.py
imdb_rating/: __init__.py
imdb_rating/dependencies/: __init__.py  models.py  spiders.py
imdb_rating/workflow/: flow.py
notebooks/: exploration2.ipynb
src/: film.py  piepline.py  spider_dataset.py  spider_upcoming.py
test/: exploration.ipynb  ml.ipynb  upcoming.ipynb
workflow/: Dockerfile  flow.py  requirements.txt  setup.py  test.py
workflow/components/: movie.py  spider.py
