[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""
authors = ["Pereg Hergoualc'h <pereg.hergoualch@gamail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
Scrapy = "^2.5.1"
pyspark = "^3.2.0"
sqlmodel = "^0.0.6"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
